<resources>
    <string name="app_name">CS356 Mobile App</string>
    <string name="title_home">Home</string>
    <string name="title_create_event">Create Event</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirmed_events">Confirmed Events</string>
    <string name="in_progress_events">In-Progress Events</string>
    <string name="invitee_title">Invitees</string>
    <string name="event_details"><u>Event Details:</u></string>
    <string name="more_details">More Details</string>
    <string name="event_title">(Event Title)</string>
    <string name="invitees">Invitees</string>
    <string name="add_text">+ Add</string>
    <string name="date_text">Date:</string>
    <string name="time_text">Time:</string>
    <string name="location_text">Location:</string>
    <string name="confirm_event_text">Confirm Event</string>
    <string name="in_progress_event_text">Set To In Progress</string>
    <string name="edit_event_text">Edit Event Details</string>
    <string name="update_event_text">Save Changes</string>
    <string name="in_progress_status_text">Status: In Progress</string>
    <string name="confirmed_status_text">Status: Confirmed</string>
    <string name="activity"><b>Activity: </b> %1$s</string>
    <string name="date"><b>Date: %1$s</b></string>
    <string name="time"><b>Time: %1$s</b></string>
    <string name="location">Location: %1$s</string>
    <string name="status">Status: </string>
    <string name="in_progress_text">In-Progress</string>
    <string name="confirmed_text">Confirmed</string>
</resources>