<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.event.CreateEventFragment">

    <EditText
        android:id="@+id/event_title_text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/event_title"/>

    <ExpandableListView
        android:theme="@style/menuItemTheme"
        android:id="@+id/expandable_invitees_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/date_text"/>
        <EditText
            android:id="@+id/month_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="Month"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"/>
        <EditText
            android:id="@+id/day_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="Day"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"/>
        <EditText
            android:id="@+id/year_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="Year"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/time_text"/>
        <EditText
            android:id="@+id/time_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="9:00 - 11:00 PM MDT"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/location_text"/>
        <EditText
            android:id="@+id/location_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="123 N 456 Street, State, Zip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/create_event_button"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/confirm_event_text"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </LinearLayout>



</LinearLayout>